# collectd-ipa

./: .pre-commit-config.yaml  Makefile  README.md  collectd-ipa.spec  collectd_ipa.py  collection.conf  pyproject.toml  types.db
collectd.d/: ipa-data.conf  ipa.conf
collectd_ipa/: __init__.py
devel/: run-liccheck.sh
